--- a/news_main_app/news/templates/news/adding_form_page.html
+++ b/news_main_app/news/templates/news/adding_form_page.html
@@ -3,10 +3,11 @@
 {% block title %}Add news{% endblock %}
 
 {% block content %}
-<h1>Add news</h1>
+<h1>Добавление новости</h1>
 <form method="POST" class="post-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Save</button>
+    <button type="submit" class="btn btn-success">Сохранить</button>
+    <a href="/news" class="btn btn-secondary">Отмена</a>
 </form>
 {% endblock %}
