--- a/news_main_app/news/templates/news/main_page.html
+++ b/news_main_app/news/templates/news/main_page.html
@@ -3,18 +3,28 @@
 {% block title %}Main Page{% endblock %}
 
 {% block content %}
-  <div>
+  <div class="d-flex justify-content-between">
     <a href="{% url 'add-news' %}" class="btn btn-success">Добавить новость</a>
+    <div>
+      <form class="d-flex" method="get" action="{% url 'search-news' %}" role="search">
+        {% csrf_token %}
+        <input name="search_news" class="form-control" type="search" placeholder="Поиск..."
+               aria-label="Поиск">
+        <button class="btn btn-outline-primary ms-2" type="submit">Поиск</button>
+        <a href="{% url 'news' %}" class="btn btn-secondary ms-1">Сбросить</a>
+    </form>
+
+    </div>
   </div>
   
 
   <div class="dropdown mt-5">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Sort by
+      Отсортировать
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="{% url 'news' %}">New first</a></li>
-      <li><a class="dropdown-item" href="{% url 'news-reversed' %}">Old first</a></li>
+      <li><a class="dropdown-item" href="{% url 'news' %}">Сначало новые</a></li>
+      <li><a class="dropdown-item" href="{% url 'news-reversed' %}">Сначало старые</a></li>
     </ul>
   </div>
 
@@ -24,7 +34,7 @@
     <p>{{ item.news_text }}</p>
     <div class="d-flex justify-content-beetwen mt-3">
       <p>
-        Author is: {{ item.author }}
+        Автор: {{ item.author }}
       </p>
       <div class="ms-auto">
       
@@ -32,8 +42,23 @@
         <a href="{% url 'delete-news' pk=item.pk %}" class="btn btn-danger">Удалить</a>
       </div>
     </div>
-    
-    
   </div>
   {% endfor %}
+  <div class="pagination mt-3">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1" class="btn btn-info">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-info">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}" class="btn btn-info">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-info">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
